Try version with pubdir sub directory

--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ footnotereturnlinkcontents: "↩"
 
 permalinks:
   note: "/note/:year/:month/:day/:slug/"
-  post: "/post/:year/:month/:day/:slug/"
+  post: "/post/:slug/"
 
 menu:
   main:
