Add lecture notes for visualization session

--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ footnotereturnlinkcontents: "↩"
 permalinks:
   note: "/note/:year/:month/:day/:slug/"
   post: "/post/:slug/"
+  notes: "/notes/:slug/"
 
 menu:
   main:
