--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-baseurl: "https://dataanalytics-euf-spring21.netlify.app/"
+baseurl: "https://dataanalytics-euf-fall22.netlify.app/"
 languageCode: "en-us"
-title: "Data Science (SpSe22)"
+title: "Data Science (FaSe22)"
 theme: "hugo-xmin"
 googleAnalytics: ""
 disqusShortname: ""
@@ -31,7 +31,7 @@ menu:
       weight: 5
 
 params:
-  description: "Course website for the course 'Data Science using R', Spring Semester 2022."
+  description: "Course website for the course 'Data Science using R', Fall Semester 2022/23."
   footer: "&copy; [Claudius Gräbner-Radkowitsch](https://claudius-graebner.com/) 2021 -- {Year} | [EUF](https://www.uni-flensburg.de/en/pluralist-economics) | [Github](https://github.com/graebnerc) | [Twitter](https://twitter.com/ClaudiusGrabner) | [OrcID](https://orcid.org/0000-0003-4065-4722) \\\n Created with [blogdown](https://github.com/rstudio/blogdown) using the [Xmin theme](https://github.com/yihui/hugo-xmin)"
 
 markup:
